Collin, IT, Fixed dropdown menu and research alignment bugs, fixed contact sizing

--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,5 +1,5 @@
 .contactMain{
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     flex-direction: row;
     flex-wrap:wrap;
@@ -32,7 +32,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     /* width: 100%;
     max-width: 600px; */
-    width:50%;
+    width:60%;
     box-sizing: border-box;
 }
 
@@ -136,8 +136,7 @@
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    width: 40%;
-    /* max-width: 600px; */
+    width: 60%;
     box-sizing: border-box;
 }
 
